// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Ins checkGrammar=false 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkGrammar=true 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkHighlight=false 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkHighlight=true 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkSpaces=false 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkSpaces=true 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins className="my-classname" 1`] = `
<ins
  className="uu5-bricks-ins my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins content="This is Content from ContentMixin" 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</ins>
`;

exports[`UU5.Bricks.Ins content=12345 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</ins>
`;

exports[`UU5.Bricks.Ins controlled=false 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins controlled=true 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins default props 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins disabled=false 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins disabled=true 1`] = `
<ins
  className="uu5-bricks-ins uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</ins>
`;

exports[`UU5.Bricks.Ins docKit examples UU5.Bricks.Ins should render without crash 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="inserted"
  />
</ins>
`;

exports[`UU5.Bricks.Ins dynamic=false 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins dynamic=true 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins hidden=false 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins hidden=true 1`] = `
<ins
  className="uu5-bricks-ins uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins id="myId" 1`] = `
<ins
  className="uu5-bricks-ins"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins ignoreHTML=false 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins ignoreHTML=true 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins mainAttrs=undefined 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins name="myName" 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins noIndex=false 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins noIndex=true 1`] = `
<ins
  className="uu5-bricks-ins uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins selected=false 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins selected=true 1`] = `
<ins
  className="uu5-bricks-ins uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins style="padding:8px; borderRadius: 2px" 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Ins style={"backgroundColor":"red","color":"blue"} 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Ins textCorrector=false 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins textCorrector=true 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins tooltip="My Tooltip" 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
